tests/extensions/enhanced_assignments/valid/minusAccumulator.wacc
# Output:
# 2

begin
    int i = 5;
    i -= 3;
    println i
end