tests/extensions/enhanced_assignments/semanticErr/badIdentMinus.wacc
begin
    i -= 10
end